# stkjokething-server

./: CMakeLists.txt  Makefile  include  readme.md
src/: logging.hpp  main.cpp  starkingdoms.hpp  testClient.html  testClient.js
